--- a/src/components/UI/buttons/button.css
+++ b/src/components/UI/buttons/button.css
@@ -1,10 +1,22 @@
 .button
 {
+    display: flex;
+    justify-content: center;
+    gap: .5rem;
     padding: 2rem 1rem;
+    font-size: 5vw;
     background-color: #8a2be2;
     color: #fff;
     cursor: pointer;
     
     align-items: center;
     text-align: center;
+}
+
+@media(min-width:740px)
+{
+    .button
+    {
+        font-size: 38px;
+    }
 }
