--- a/src/components/game_window/GameWindow.css
+++ b/src/components/game_window/GameWindow.css
@@ -1,8 +1,30 @@
-.game_window-wrapper
-{
-    display: flex;
-    height: 80vh;
+.window-wrapper{
+    height: 100vh;
     width: 100vw;
     justify-content: center;
-    margin-top: 20vh;
+}
+
+.game_window-wrapper
+{
+    padding-top: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.game_window-nav
+{
+    position: absolute;
+    display: flex;
+    right: 0;
+    gap: 20px;
+    padding-top: 1rem;
+    padding-right: 1rem;
+}
+
+.game_window-nav_button
+{
+    cursor: pointer;
+    border: 2px solid #000;
+    padding: .5rem .2rem;
 }
