--- a/src/components/settings/Settings.css
+++ b/src/components/settings/Settings.css
@@ -1,16 +1,35 @@
 .settings
 {
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+}
+.settings-wrapper
+{
+    margin-top: 20vh;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.settings-header
+{
+    margin: 0;
+    font-size: 3rem;
+    text-align: center;
+}
+.fs-5{
+    font-size: 3rem;
 }
 .settings-buttons
 {
     display: flex;
     flex-direction: row;
+    gap: 2rem;
 }
 
 .btn-selected
 {
     border: 1px solid #000;
+    max-width: inherit;
 }
