--- a/src/components/settings/Settings.css
+++ b/src/components/settings/Settings.css
@@ -18,9 +18,6 @@
     font-size: 3rem;
     text-align: center;
 }
-.fs-5{
-    font-size: 3rem;
-}
 .settings-buttons
 {
     display: flex;
@@ -28,8 +25,14 @@
     gap: 2rem;
 }
 
+.btn-switch
+{
+    text-align: center;
+}
+
 .btn-selected
 {
-    border: 1px solid #000;
+    border: 3px solid #000;
+    font-size: 2rem;
     max-width: inherit;
 }
