--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,14 @@ input, button
     font-weight: bold;
     font-size: 2rem;
 }
+
+.ta-c
+{
+    text-align: center;
+}
+
+.active
+{
+    background-color: #000;
+    color: #fff;
+}
