--- a/src/components/leaderboard/leaderboard.css
+++ b/src/components/leaderboard/leaderboard.css
@@ -1,6 +1,19 @@
 .leaderboard
 {
-    margin: 0 33vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+.leaderboard-wrapper
+{
+    max-width: 50vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .leaderboard_flex
